--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
@@ -35,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.0",
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
