--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-dist": "^4.15.5",
     "swagger-ui-express": "^4.6.0",
     "typeorm": "^0.2.45"
   },
